# catalog-api-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/parsers/: requirements.txt  server.py
app/scripts/: clean_bearings_data.py  import_bearing_images.py
app/ui/: app.py  requirements.txt
catalog_api_studio/: __init__.py  main.py
catalog_api_studio/api/: app.py  routes.py
catalog_api_studio/config/: settings.py
catalog_api_studio/db/: engine.py  models.py
catalog_api_studio/extraction/: pipeline.py
catalog_api_studio/importers/: base.py  csv_importer.py  pdf_importer.py  xlsx_importer.py
catalog_api_studio/models/: schemas.py
catalog_api_studio/normalization/: normalizer.py
catalog_api_studio/ocr/: engine.py
catalog_api_studio/pdf/: bitmap.py  hybrid.py  native.py
catalog_api_studio/search/: indexer.py
catalog_api_studio/services/: export_service.py  import_service.py  product_service.py
catalog_api_studio/ui/: api_view.py  import_view.py  main_window.py  preview_view.py  products_view.py  review_view.py  search_view.py
catalogs/index/: ASAHI - General Catalogue.json  (+145 more)
data/: categories.json  goods-arrivals.json  material-types.json  price-history.json  stock-shapes.json  units.json
scrapers/: alekspodshipnik_ui_scraper_README.md  bearings-normalized-clean.json  bearings.json  bearings_scaffold_2026-03-14_163021_official_repaired.json  bearings_scaffold_normalized_model_codes.json  bearingы-normalized-final.json  grade-shapes.json  materials.json
tests/: conftest.py  test_api.py  test_db.py  test_importers.py  test_normalization.py
(+15 files in other folders)
